# OpenCVHelloWord

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  image.cpp  image.hpp
src/: global.hpp  main.cpp
